--- a/templates/about.html
+++ b/templates/about.html
@@ -24,11 +24,11 @@
 <div class="container">
     <div class="about-grid">
         <div class="about-section">
-            Our aim is to carve a niche for GATES that would set it apart from all other fest in India.
+            Google Developer Student Clubs was established in Guru Tegh Bahadur Institute of Technology in 2018. Since then it has been an upwards journey. We are proud to call ourselves the only active running community at our institution.
         </div>
         <div class="about-section-img about-section-img-1">
-            <img class="about-img-1" src="{% static 'assets/images/gates/img-1.jpg' %}" />
-            <img class="about-img-2" src="{% static 'assets/images/gates/img-2.jpg' %}" />
+            <img class="about-img-1" src="{% static 'assets/images/gates/img-1.PNG' %}" />
+            <img class="about-img-2" src="{% static 'assets/images/gates/img-2.PNG' %}" />
         </div>
     </div>
     <div class="spacing-10"></div>
@@ -36,12 +36,11 @@
     <div class="spacing-10 image-positioning-absolute"></div>
     <div class="about-grid-1">
         <div class="about-section-img about-section-img-1" style="grid-area: img-section;">
-            <img class="about-img-1" src="{% static 'assets/images/gates/img-3.jpg' %}" />
-            <img class="about-img-2" src="{% static 'assets/images/gates/img-4.jpg' %}" />
+            <img class="about-img-1" src="{% static 'assets/images/gates/img-3.PNG' %}" />
+            <img class="about-img-2" src="{% static 'assets/images/gates/img-4.PNG' %}" />
         </div>
         <div class="about-section about-section-1">
-            We stand by GATES' motto of fun and success and wish to showcase the uniqueness which 
-            GTBIT stands by hosting innovative,groundbreaking and progressive events.
+            We had attendees as our community members, students from our institution and also students from other institutions.
         </div>
     </div>
     <div class="spacing-10"></div>
@@ -49,11 +48,11 @@
     <div class="spacing-10 image-positioning-absolute"></div>
     <div class="about-grid">
         <div class="about-section">
-            We envisioned this festival as a platform, or medium through which students could showcase their talent and culture
+             We are happy to announce that GTBIT will be organising GATES 2022 in the month of May and GDSC is going to hold informative, creative and fun learning experiences in the form of events at our institution.
         </div>
         <div class="about-section-img about-section-img-1">
-            <img class="about-img-1" src="{% static 'assets/images/gates/img-5.jpg' %}" />
-            <img class="about-img-2" src="{% static 'assets/images/gates/img-6.jpg' %}" />
+            <img class="about-img-1" src="{% static 'assets/images/gates/img-5.PNG' %}" />
+            <img class="about-img-2" src="{% static 'assets/images/gates/img-6.PNG' %}" />
         </div>
     </div>
     <div class="spacing-10"></div>
@@ -68,14 +67,14 @@
     <div class="glance-grid">
         <div class="glance-container">
             <div>1</div>
-            <div>College</div>
+            <div>Society</div>
         </div>
         <div class="glance-container" style="background: linear-gradient(to bottom right,#6400df70,#7300ff,#6400df70);;">
-            <div>64</div>
+            <div>80+</div>
             <div>Events</div>
         </div>
         <div class="glance-container">
-            <div>4000+</div>
+            <div>6000+</div>
             <div>Students</div>
         </div>
     </div>
