--- a/templates/index.html
+++ b/templates/index.html
@@ -94,37 +94,34 @@
             <div class="event-container">
                 <div class="event-container-inner event-container-inner-1">
                     <div>
-                        <div class="event-container-heading">Technical</div>
+                        <div class="event-container-heading">Past</div>
                         <div class="event-container-content">Events</div>
                     </div>
                     <div class="event-container-content-inner">
                         <Br/>
                         <Br/>
                         <Br/>
-                        The technical events include hackathons, games related to coding, and some minor inter-college 
-                        competitions like multiplayer gaming. All the techies out there, GATES is all set for you!
+                        GDSC GTBIT has conducted fun, informative technical as well as non technical events which have proved to be a huge success with the help of our community.
                     </div>
-                    <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/technical/');">Know More</div>
+                    <!-- <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/technical/');">Know More</div> -->
                 </div>
             </div>
             <div class="event-container">
                 <div class="event-container-inner event-container-inner-2">
                     <div>
-                        <div class="event-container-heading">Cultural</div>
+                        <div class="event-container-heading">Upcoming</div>
                         <div class="event-container-content">Events</div>
                     </div>
                     <div class="event-container-content-inner">
                         <Br/>
                         <Br/>
                         <Br/>
-                        The cultural events include dance performances by different students, like Bhangra and 
-                        western dances, and music performances and competitions between students of various colleges. 
-                        Students get exposure and exciting prizes are won by them.
+                        This year GDSC GTBIT is going to bring to you never experienced before fun innovative events, games in both technical and non technical domains for GATES 2022.
                     </div>
                     <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/cultural/');">Know More</div>
                 </div>
             </div>
-            <div class="event-container">
+            <!-- <div class="event-container">
                 <div class="event-container-inner event-container-inner-3">
                     <div>
                         <div class="event-container-heading">Management</div>
@@ -175,7 +172,7 @@
                     </div>
                     <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/divine/');">Know More</div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>  
 </div>
