--- a/templates/base.html
+++ b/templates/base.html
@@ -33,13 +33,13 @@
             <div class="all-main-logo-text">
                 <span>
                     <div>
-                        <span style="color: rgb(76,199,232);">G</span>
-                        <span style="color: rgb(107,102,174);">A</span>
-                        <span style="color: rgb(168,149,199);">T</span>
-                        <span style="color: rgb(169,77,157);">E</span>
-                        <span style="color: rgb(241,113,171);">S</span>
+                        <span style="color: rgb(0,173,239);">G</span>
+                        <span style="color: rgb(101,166,100);">A</span>
+                        <span style="color: rgb(254,242,0);">T</span>
+                        <span style="color: rgb(129,127,40);">E</span>
+                        <span style="color: #8a8a8a;">S</span>
                     </div>
-                    <div style="font-size: 0.8em;line-height: 0.8em;">2020</div>
+                    <div style="font-size: 0.8em;line-height: 0.8em;">2022</div>
                 </span>
             </div>
         </div>
@@ -76,19 +76,19 @@
         <div class="container">
             <div class="footer-grid">
                 <div>
-                    <div class="footer-college-name">GATES 2020</div>
-                    <div style="letter-spacing: 0.05em;">GTBIT Techno-Cultural Event for creative Souls</div>
+                    <div class="footer-college-name">GATES 2022</div>
+                    <div style="letter-spacing: 0.05em;">[gdsc logo will be there]</div>
                     <div style="height: 2em;"></div>
-                    <div><a class="footer-brochure">Download Brochure</a></div>
+                    <div><a class="footer-brochure" href="https://drive.google.com/file/d/1q4toZuNei0jL_vBqebstC_qkTPxBojdm/view" target="blank">Download Brochure</a></div>
                 </div>
                 <div>
                     <div style="font-size: 1.5em;">Follow Us:</div>
                     <div class="footer-links">
-                        <div><a href="#"><img src="{% static 'assets/images/socialImg1.svg' %}" /></a></div>
-                        <div><a href="#"><img src="{% static 'assets/images/socialImg2.svg' %}" /></a></div>
-                        <div><a href="#"><img src="{% static 'assets/images/socialImg3.svg' %}" /></a></div>
-                        <div><a href="#"><img src="{% static 'assets/images/socialImg4.svg' %}" /></a></div>
-                        <div><a href="#"><img src="{% static 'assets/images/socialImg5.svg' %}" /></a></div>
+                        <div><a href="https://www.facebook.com/gdscgtbit" target="blank"><img src="{% static 'assets/images/socialImg1.svg' %}" /></a></div>
+                        <div><a href="https://twitter.com/gdscgtbit" target="blank"><img src="{% static 'assets/images/socialImg2.svg' %}" /></a></div>
+                        <div><a href="https://www.instagram.com/gdscgtbit" target="blank"><img src="{% static 'assets/images/socialImg3.svg' %}" /></a></div>
+                        <div><a href="https://www.youtube.com/c/GDSCGTBIT/featured" target="blank"><img src="{% static 'assets/images/socialImg4.svg' %}" /></a></div>
+                        <div><a href="https://www.linkedin.com/company/gdscgtbit/" target="blank"><img src="{% static 'assets/images/socialImg5.svg' %}" /></a></div>
                     </div>
                 </div>
                 <div class="footer-college-address">
@@ -101,7 +101,7 @@
             <div style="height: 2.5em;"></div>
             <hr/>
             <div style="height: 1em;"></div>
-            <div style="text-align: center;text-shadow: 0 0 3px #000;">© GATES 2020. All Rights Reserved.</div>
+            <div style="text-align: center;text-shadow: 0 0 3px #000;">© GTBIT 2022. All Rights Reserved.</div>
             <div style="height: 1em;"></div>
         </div>
     </div>
