--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,9 @@
             <div class="footer-grid">
                 <div>
                     <div class="footer-college-name">GATES 2022</div>
-                    <div style="letter-spacing: 0.05em;">[gdsc logo will be there]</div>
+                    <div style="letter-spacing: 0.05em;">
+                        <img src="static\GDSC_LOGO.svg" style="width: 20em;" alt="gdsc_logo_text">
+                    </div>
                     <div style="height: 2em;"></div>
                     <div><a class="footer-brochure" href="https://drive.google.com/file/d/1q4toZuNei0jL_vBqebstC_qkTPxBojdm/view" target="blank">Download Brochure</a></div>
                 </div>
