--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
                     <div>
                         <span style="color: rgb(0,173,239);">G</span>
                         <span style="color: rgb(101,166,100);">A</span>
-                        <span style="color: rgb(254,242,0);">T</span>
+                        <span style="color: #8a8a8a;">T</span>
                         <span style="color: rgb(129,127,40);">E</span>
-                        <span style="color: #8a8a8a;">S</span>
+                        <span style="color: rgb(254,242,0);">S</span>
                     </div>
                     <div style="font-size: 0.8em;line-height: 0.8em;">2022</div>
                 </span>
