--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             <p class="m-loader-shine">GATES</p>
         </div>
         <div class="m-loader-2020">
-            <p class="m-loader-shine m-2020-delay">2020</p>
+            <p class="m-loader-shine m-2020-delay">2022</p>
         </div>
     </div>
     <!--Mobile_Loader-->
@@ -51,18 +51,18 @@
                     <img class="page-1-img-popOut" src="{% static 'assets/smallElement/two.svg' %}" />
                     <img class="page-1-img-popOut" src="{% static 'assets/smallElement/zero.svg' %}" />
                     <img class="page-1-img-popOut" src="{% static 'assets/smallElement/two.svg' %}" />
-                    <img class="page-1-img-popOut" src="{% static 'assets/smallElement/zero.svg' %}" />
+                    <img class="page-1-img-popOut" src="{% static 'assets/smallElement/two.svg' %}" />
                 </div>
             </div>
             <div style="height: 1em;"></div>
             <div id="page-1-lower-content-elmts">
                 <div class="page-1-date">
-                    March 18<sup>th</sup> - 20<sup>th</sup> 2020
+                    May 09<sup>th</sup> - 11<sup>th</sup> 2022
                 </div>
                 <div class="page-1-venue">
                     Techno Cultural Fest
                 </div>
-                <div class="page-1-venue-2">GTBIT</div>
+                <div class="page-1-venue-2">GDSC GTBIT</div>
 
                 <div class="page-1-explore">
                     <a href="#event">
@@ -103,7 +103,7 @@
                         <Br/>
                         GDSC GTBIT has conducted fun, informative technical as well as non technical events which have proved to be a huge success with the help of our community.
                     </div>
-                    <!-- <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/technical/');">Know More</div> -->
+                    <div class="event-know-more" onclick="redirectUrlText('EVENTS','https://linktr.ee/gdscweb');">Know More</div>
                 </div>
             </div>
             <div class="event-container">
