--- a/templates/index.html
+++ b/templates/index.html
@@ -102,8 +102,13 @@
                         <Br/>
                         <Br/>
                         GDSC GTBIT has conducted fun, informative technical as well as non technical events which have proved to be a huge success with the help of our community.
-                    </div>
-                    <div class="event-know-more" onclick="redirectUrlText('EVENTS','https://linktr.ee/gdscweb');">Know More</div>
+                    </div >
+                    <!-- <div class="event-know-more" onclick="redirectUrlText('EVENTS','https://linktr.ee/gdscweb');">Know More</div> -->
+                    <div class="event-know-more">
+                        <a href="https://linktr.ee/gdscweb" style="text-decoration: none;"> 
+                            Know More
+                        </a>
+                    </div>         
                 </div>
             </div>
             <div class="event-container">
@@ -118,7 +123,12 @@
                         <Br/>
                         This year GDSC GTBIT is going to bring to you never experienced before fun innovative events, games in both technical and non technical domains for GATES 2022.
                     </div>
-                    <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/cultural/');">Know More</div>
+                    <!-- <div class="event-know-more" onclick="redirectUrlText('EVENTS','event/cultural/');">Know More</div> -->
+                    <div class="event-know-more">
+                        <a href="https://linktr.ee/gdscweb" style="text-decoration: none;"> 
+                            Know More
+                        </a>
+                    </div> 
                 </div>
             </div>
             <!-- <div class="event-container">
