added new brochure and book ticket link

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                         <img src="{% static 'GDSC_LOGO.svg' %}" style="width: 20em;" alt="gdsc_logo_text">
                     </div>
                     <div style="height: 2em;"></div>
-                    <div><a class="footer-brochure" href="https://drive.google.com/file/d/1q4toZuNei0jL_vBqebstC_qkTPxBojdm/view" target="blank">Download Brochure</a></div>
+                    <div><a class="footer-brochure" href="https://drive.google.com/file/d/1FKtfrTrVuoT3NnGRrnZOYFO4yDs8oTk_/view?usp=sharing" target="blank">Download Brochure</a></div>
                 </div>
                 <div>
                     <div style="font-size: 1.5em;">Follow Us:</div>
