--- a/templates/starNight.html
+++ b/templates/starNight.html
@@ -93,7 +93,10 @@
     <div class="about-ending">
         <div>Are You Ready?</div>
         <div>Book Your Tickets Now</div>
-        <div class="book-ticket">Book Tickets</div>
+        <div class="book-ticket">
+            <a href="https://linktr.ee/bookticketgdsc" style="text-decoration: none;">Book Tickets</a>
+            
+        </div>
     </div>
 </div>
 
